test/should_fail/reuse_001.grg
actions reuse_001;

rule r {
	pattern {
		x: Node;
		y: Node;
		x -e:Edge-> y;
	}
	replace{
		y;
		x-e->.;
	}
}
